[package]
name = "tinyfft"
version = "0.1.0"
edition = "2021"
description = "Tiny no_std FFT (Cooley-Tukey radix-2) targeting WebAssembly. 1D and 2D, ~11 KB wasm."
license = "MIT"
repository = "https://github.com/rluts/tinyfft"
keywords = ["fft", "wasm", "no_std", "audio", "dsp"]
categories = ["algorithms", "no-std", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libm = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
panic = "abort"
