[package]
name = "tinyfft"
version = "0.2.0"
edition = "2021"
description = "Tiny no_std FFT (Cooley-Tukey radix-4, wasm SIMD) targeting WebAssembly. 1D and 2D, ~13 KB wasm."
license = "MIT"
repository = "https://github.com/rluts/tinyfft"
keywords = ["fft", "wasm", "simd", "no_std", "dsp"]
categories = ["algorithms", "no-std", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libm = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
panic = "abort"
