[package]
name = "tinyfft"
version = "0.2.0"
edition = "2021"
description = "Tiny FFT for the browser and Node, written in no_std Rust and compiled to WebAssembly. Radix-4 with wasm SIMD (planar layout), ~16 KB wasm shipped as a raw file. 1D and 2D, in-place, single-precision f32. Zero runtime dependencies."
license = "MIT"
repository = "https://github.com/rluts/tinyfft"
keywords = ["fft", "wasm", "simd", "no_std", "dsp"]
categories = ["algorithms", "no-std", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libm = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
panic = "abort"
